--- a/pagina/index.html
+++ b/pagina/index.html
@@ -9,12 +9,12 @@
   <h1>Proyecto Escuela</h1>
 
   <!-- Menú principal -->
-  <div class="menu">
-    <button onclick="mostrarSeccion('alumnos')">Gestionar alumnos</button>
-    <button onclick="mostrarSeccion('carreras')">Gestionar carreras</button>
-    <button onclick="mostrarSeccion('asignar')">Asignar alumno a carrera</button>
-    <button onclick="mostrarSeccion('listarAlumnos')">Listar alumnos</button>
-    <button onclick="mostrarSeccion('listarCarreras')">Listar carreras</button>
+  <div id="menuBotones" class="menu">
+    <button id="GestionarAlumnos" onclick="mostrarSeccion('alumnos')">Gestionar alumnos</button>
+    <button id="GestionarAlumnos"onclick="mostrarSeccion('carreras')">Gestionar carreras</button>
+    <button id="GestionarAlumnos"onclick="mostrarSeccion('asignar')">Asignar alumno a carrera</button>
+    <button id="GestionarAlumnos"onclick="mostrarSeccion('listarAlumnos')">Listar alumnos</button>
+    <button id="GestionarAlumnos"onclick="mostrarSeccion('listarCarreras')">Listar carreras</button>
   </div>
 
   <!-- Sección: alumnos -->
